# tracker

./: configure.ac  meson.build
src/libtracker-extract/: tracker-resource-helpers.c
src/libtracker-sparql/: tracker-namespace-manager.c  tracker-resource.c  tracker-resource.h
src/tracker-extract/: tracker-extract-decorator.c  tracker-extract-gstreamer.c  tracker-extract-mp3.c  tracker-extract.c
tests/functional-tests/: 01-insertion.py  02-sparql-bugs.py  03-fts-functions.py  04-group-concat.py  05-coalesce.py  06-distance.py  07-graph.py  08-unique-insertions.py  09-concurrent-query.py  10-sqlite-misused.py  11-sqlite-batch-misused.py  12-transactions.py  13-threaded-store.py  14-signals.py  15-statistics.py  16-collation.py  17-ontology-changes.py  200-backup-restore.py  400-extractor.py  meson.build
tests/functional-tests/common/utils/: applicationstest.py  extractor.py  helpers.py  minertest.py  storetest.py  writebacktest.py
tests/functional-tests/configuration/: __init__.py.in  meson.build
tests/functional-tests/test-extraction-data/office/: pdf-doc.expected
tests/functional-tests/test-extraction-data/playlists/: playlist-test-1.expected
